src/stylesheets/rhizo.less
// -*- mode: CSS;-*-

/******************
  LESS Colors
 *****************/

/* Background colors */
@primary-chrome: #6391de;
@secondary-chrome: #426dc9;
@dark-secondary-chrome: @secondary-chrome - #333;
@alternate-primary-chrome: #8fd19e;

@background: #fff;
@secondary-background: #ebeff9;

@dark-background: @background - #444;
@dark-secondary-background: @secondary-background - #111;

@alternate-secondary-background: #d9f2db;
@dark-alternate-secondary-background: @alternate-secondary-background - #111;

@warning-background: #FE8;

/* Controls */
@primary-control: #2e4987;
@secondary-control: #6a7eac;
@inverted-control: #fff;

/* Links */
@primary-link: #20c;
@secondary-link: #78c;

/* Fonts */
@bold-text: #000;
@normal-text: #222;
@secondary-text: #888;
@attention-text: #080;
@primary-chrome-text: #fff;

/* Selection */
@selection-background: #F796FF;
@selection-border: #7E18AC;

/* Derived colors for Rhizosphere specific entities */
@model-background: @background;
@border-color: @primary-chrome;
@font-logo-color: @secondary-chrome;
@font-action-dropped-color: @secondary-link;

@keyboard-background: @background;
@keyboard-border-color: @dark-background;

/******************
  LESS mixins
 *****************/

.gradient (@fromcolor, @tocolor) {
  background-color: @fromcolor;
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(@fromcolor), to(@tocolor));
  background-image: -moz-linear-gradient(-90deg, @fromcolor, @tocolor);
}

.horgradient (@fromcolor, @tocolor) {
  background-color: @fromcolor;
  background-image: -webkit-gradient(linear, 0 0, 100% 0, from(@fromcolor), to(@tocolor));
  background-image: -moz-linear-gradient(@fromcolor, @tocolor);
}


.importantgradient(@fromcolor, @tocolor) {
  background-color: @fromcolor !important;
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(@fromcolor), to(@tocolor)) !important;
  background-image: -moz-linear-gradient(-90deg, @fromcolor, @tocolor) !important;
}

.shadow(@dx, @dy, @blur, @color) {
  -webkit-box-shadow: @dx @dy @blur @color;
  -moz-box-shadow: @dx @dy @blur @color;
  box-shadow: @dx @dy @blur @color;
}

.noshadow {
  -webkit-box-shadow: 0 0 0;
  -moz-box-shadow: 0 0 0;
  box-shadow: 0 0 0;
}

.rounded_corners(@radius) {
  -moz-border-radius: @radius;
  border-radius: @radius;
}

/******************
  Global settings
 *****************/
.rhizo {
  color: @normal-text;
  font-size: 0.8em;
  overflow: hidden;
}

.rhizo.rhizo-device-ipad {
  font-size: 0.9em;
}

/* Manual tweak on jQuery UI styles, otherwise rhizo-viewport looks funny while
   dragging is in progress. */
.rhizo .ui-state-disabled {
  opacity: 1; filter:Alpha(Opacity=1);
}

.rhizo A, .rhizo A:visited {
  color: @primary-link;
}

/******************
  Section headers
 *****************/
.rhizo-section-header {
  font-variant: small-caps;
  text-align: center;
  font-size: 1.3em;
  font-weight: bold;
  padding-bottom: 2px;
  margin: 5px 0 4px 0;
  border-top: 1px solid @border-color;
  .gradient(@primary-chrome, @secondary-chrome);
  color: @primary-chrome-text;
  .shadow(0, 2px, 5px, @dark-background);
}

.rhizo-bottom-bar .rhizo-section-header {
  border-width: 0;
  background-color: transparent;
  background-image: none;
  font-variant: normal;
  padding: 4px 5px;
  margin: 0;
  height: 1.5em;
  display: inline;
  .noshadow;
}

.rhizo-bottom-bar .rhizo-section-header:hover {
  .gradient(@secondary-chrome, @dark-secondary-chrome);
}

/* When inside a bottom-bar */
.rhizo-bottom-bar .rhizo-section-header A {
  color: @primary-chrome-text;
  text-decoration: none;
}

.rhizo-bottom-bar .rhizo-section-header A:hover {
  color: @primary-chrome-text;
}

.rhizo-bottom-bar .rhizo-section-open,
.rhizo-bottom-bar .rhizo-section-open:hover {
  .importantgradient(@dark-secondary-chrome, @secondary-chrome);
}

/******************
  Panels
 *****************/
.rhizo-left {
  position: absolute;
  background-color: @background;
  left: 0;
  top: 0;
  bottom: 0;
  width: 295px;
  border-right: 1px solid @border-color;
  .shadow(0, 1px, 5px, @dark-secondary-chrome);
  z-index: 300;
}

.rhizo-right {
  position: absolute;
  top: 0;
  right: 5px;
  width: 120px;
  height: 98%;
  z-index: 300;
}

.rhizo-right-pop {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  width: 5px;
  border-left: 1px solid @border-color;
  background-color: @background;
  color: @primary-control;
  padding: 50% 0;
  z-index:300;
}

.rhizo-right-pop:hover {
  .horgradient(@primary-chrome, @secondary-chrome);
  color: @primary-chrome-text;
}

.rhizo-bottom-bar {
  position: absolute;
  bottom: 0;
  z-index: 1300;
  .gradient(@primary-chrome, @secondary-chrome);
  .shadow(0, -1px, 5px, @dark-secondary-chrome);
  margin: 0;
  padding: 4px 0;
  height: 1.5em;
  width: 100%;
}

/******************
  Floating Panels
 *****************/
.rhizo-floating-panel {
  position: absolute;
  border-top: 1px solid @border-color;
  border-bottom: 1px solid @border-color;
  background-color: @background;
  bottom: 2.4em;
  left: 0px;
  height: 6em;
  width: 100%;
  padding: 5px 0;
  margin: 0;
  font-weight: normal;
  z-index: 1100;
}

/******************
  Viewport, universe and layout-related tweaks
 *****************/
.rhizo-viewport {
  position: absolute;
  .gradient(@secondary-background, @dark-secondary-background);
  top: 0;
  left: 295px;
  right: 5px;
  bottom: 0;
  overflow: hidden;
}

.rhizo-universe {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
/*  border: 1px dotted #000;*/ /* uncomment this to debug endless desktop */
}

.rhizo-bucket-header {
  font-size: 1.3em;
  font-weight: bold;
  border-bottom: 1px solid @secondary-chrome;
  width: 200px;
  margin-bottom: 5px;
  color: @primary-chrome;
}

.rhizo-tree-connector {
  background-color: @primary-chrome;
}
/* ... */

